spec/error_undefined_variable.expected
before
Parse error: spec/error_undefined_variable.kex:4:16: runtime error: Undefined variable: doesNotExist
